--- a/templates/md/pattern-property.ejs
+++ b/templates/md/pattern-property.ejs
@@ -5,11 +5,11 @@
  * of the License at http://www.apache.org/licenses/LICENSE-2.0
  */ %>
 
-## Pattern: `<%=name %>`
+### Pattern: `<%=name %>`
 
 Applies to all properties that match the regular expression `<%=name %>`
 
-<% if (schema.title) { %>### <%= schema.title %><% } %>
+<% if (schema.title) { %>#### <%= schema.title %><% } %>
 
 <% if (schema.description) { %>
 <%- schema.description.replace(/\n/g, '\n\n') %>
@@ -40,7 +40,7 @@ The value of this property **must** be equal to:
 The value of this properties with this pattern **must** be equal to one of the [known values below](#<%=name %>-known-values).
 <% } else { %>
 
-### Pattern <%=name %> Type
+#### Pattern <%=name %> Type
 
 <% if (schema.type==="string") { %>
 <%- include("string-type",{schema:schema,_:_}) %>
@@ -65,7 +65,7 @@ Unknown type `<%= schema.type %>`.
 <% }} %>
 
 <% if (schema.enum!==undefined||schema["meta:enum"]!==undefined) { %>
-### Pattern <%=name %> Known Values
+#### Pattern <%=name %> Known Values
 
 | Value | Description |
 |-------|-------------|
@@ -77,14 +77,14 @@ Unknown type `<%= schema.type %>`.
 
 
 <% if (examples && examples.length == 1) { %>
-### <%=name %> Example
+#### <%=name %> Example
 
 
 ```json
 <%- examples[0] %>
 ```
 <% } else if (examples && examples.length > 1) { %>
-### Pattern <%=name %> Examples
+#### Pattern <%=name %> Examples
 <%  _.forEach(examples, example => { %>
 
 ```json
