--- a/templates/md/header.ejs
+++ b/templates/md/header.ejs
@@ -4,7 +4,7 @@
  * you may not use this file except in compliance with the License. You may obtain a copy
  * of the License at http://www.apache.org/licenses/LICENSE-2.0
  */ %>
-# <%=schema.title %> Schema
+<%= headingPrefix %># <%=schema.title %> Schema
 
 
 ```
@@ -20,7 +20,7 @@
 <%= table %>
 <% if (dependencies.length > 0) { %>
 
-## Schema Hierarchy
+<%= headingPrefix %>## Schema Hierarchy
 
 
 * <%=schema.title %> `<%= schema.$id %>`
